<resources>
    <string name="app_name">HugPet</string>
    <string name="app_introl">사지말고 입양하세요</string>
    <!--    <string name="app_introl">Adopt Animals, Adopt Family</string>-->

    <string name="email">이메일</string>
    <string name="passwd">비밀번호</string>
    <string name="nicname">닉네임</string>
    <string name="login">로그인</string>

    <!--회원가입-->
    <string name="signup">회원가입</string>
    <string name="email_hint">이메일을 입력하세요</string>
    <string name="passwd_hint">비밀번호를 입력하세요</string>
    <string name="passwdconf">비밀번호 확인</string>
    <string name="passwdconf_hint">비밀번호를 한 번 더 입력하세요</string>
    <string name="nicname_hint">닉네임을 입력하세요</string>

    <string name="yes">네</string>
    <string name="no">아니요</string>

    <!--nav-->
    <string name="nim">님</string>
    <string name="hi">반가워요!</string>
    <string name="nav_title1">MY MENU</string>
    <string name="nav_title_sub_mypet">나의 관심 동물</string>
    <string name="nav_title_pwchg">비밀번호 변경</string>
    <string name="nav_logout">로그아웃</string>
    <string name="nav_title2">INFORMATION</string>
    <string name="notice">공지사항</string>

    <!--메인 서브 타이틀-->
    <string name="home_subtitle_best">BEST 입양후기</string>
    <string name="home_subtitle_notice">허그펫 소식</string>
    <string name="home_subtitle_shelter">가족이 되어 주세요</string>
    <string name="more">더보기 ></string>

    <string name="view_cnt">조회수</string>

    <string name="notice_no">공고 번호</string>
    <string name="notice_dt">공고 기간</string>
    <string name="happen_place">발견장소</string>
    <string name="care_nm">보호소이름</string>
    <string name="care_addr">보호장소</string>
    <string name="charge_nm">담당자</string>
    <string name="notice_comment">특이사항</string>
    <string name="special_mark">특징</string>
    <string name="tel">입양문의</string>

    <string name="cur_pw">현재 비밀번호 입력</string>
    <string name="new_pw">비밀번호 입력</string>
    <string name="chg_pw">비밀번호 변경</string>

</resources>