<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PasswordChgActivity">

    <include layout="@layout/layout_top"/>

    <LinearLayout
        android:id="@+id/warp"
        android:padding="16dp"
        android:orientation="vertical"
        android:layout_below="@+id/toobarWarp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/cur_pw"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/cur_pw"
            android:inputType="textPassword"
            android:background="@drawable/item_shape"
            android:hint="@string/passwd_hint"
            android:padding="10dp"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/new_pw"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/new_pw"
            android:inputType="textPassword"
            android:background="@drawable/item_shape"
            android:hint="@string/passwd_hint"
            android:padding="10dp"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/passwdconf"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/new_pw_cof"
            android:inputType="textPassword"
            android:background="@drawable/item_shape"
            android:hint="@string/passwdconf_hint"
            android:padding="10dp"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <Button
        android:id="@+id/pw_chg_btn"
        android:layout_margin="16dp"
        android:text="@string/chg_pw"
        android:backgroundTint="@color/main_color"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>