<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/sub_title_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/sub_title1"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/home_subtitle_best"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/review_more"
                android:text="@string/more"
                android:textSize="13sp"
                android:textColor="@color/main_grey"
                android:layout_alignParentRight="true"
                android:layout_alignBaseline="@+id/sub_title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/best_you_me_rcyview"
                android:layout_marginTop="13dp"
                android:layout_below="@+id/sub_title1"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/sub_title_layout2"
            android:layout_below="@+id/sub_title_layout"
            android:layout_marginTop="36dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/sub_title2"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/home_subtitle_shelter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/shelter_more"
                android:text="@string/more"
                android:textSize="13sp"
                android:textColor="@color/main_grey"
                android:layout_alignParentRight="true"
                android:layout_alignBaseline="@+id/sub_title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/shelter_rycview"
                android:layout_marginTop="13dp"
                android:layout_below="@+id/sub_title2"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_below="@+id/sub_title_layout2"
            android:layout_marginTop="36dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/sub_title3"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/home_subtitle_notice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/notice_more"
                android:text="@string/more"
                android:textSize="13sp"
                android:textColor="@color/main_grey"
                android:layout_alignParentRight="true"
                android:layout_alignBaseline="@+id/sub_title3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/notice_rycview"
                android:layout_marginTop="13dp"
                android:layout_below="@+id/sub_title3"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>